--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@nuxt/devtools": "latest",
     "@nuxtjs/google-fonts": "^3.0.1",
+    "@types/luxon": "^3.3.0",
     "@types/node": "^18",
     "nuxt": "^3.6.2"
   },
@@ -20,6 +21,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/vue-fontawesome": "^3.0.3",
     "@vueform/multiselect": "^2.6.2",
-    "sass": "^1.63.6"
+    "luxon": "^3.3.0",
+    "sass": "^1.63.6",
+    "validator": "^13.9.0"
   }
 }
