--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@fortawesome/vue-fontawesome": "^3.0.3",
     "@pinia/nuxt": "^0.4.11",
     "@vueform/multiselect": "^2.6.2",
+    "animate.css": "^4.1.1",
     "luxon": "^3.3.0",
     "pinia": "^2.1.4",
     "sass": "^1.63.6",
