--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nuxtjs/google-fonts": "^3.0.1",
     "@types/luxon": "^3.3.0",
     "@types/node": "^18",
+    "@types/validator": "^13.7.17",
     "nuxt": "^3.6.2"
   },
   "dependencies": {
