--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@nuxt/devtools": "latest",
     "@nuxtjs/google-fonts": "^3.0.1",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/luxon": "^3.3.0",
     "@types/node": "^18",
     "@types/validator": "^13.7.17",
@@ -25,6 +26,7 @@
     "@vueform/multiselect": "^2.6.2",
     "@vueform/toggle": "^2.1.3",
     "animate.css": "^4.1.1",
+    "jsonwebtoken": "^9.0.1",
     "luxon": "^3.3.0",
     "pinia": "^2.1.4",
     "sass": "^1.63.6",
